# kilo-text-editor

./: CMakeLists.txt  a.out  kilo.cpp  main.cpp  muffin.cpp  objc.m  test.c
include/: Person.hpp  Utility.hpp
lib/Person/: Person.cpp
unittests/: CMakeLists.txt  TestPerson.cpp
utils/: CMakeLists.txt
